Uits Online  Library App

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UitsOnlineLibrary">
-        <activity android:name=".AdminLoginScreen"></activity>
+        <activity android:name=".UsernotificationS"></activity>
+        <activity android:name=".UserContactScreen" />
+        <activity android:name=".Userdiscussion" />
+        <activity android:name=".UserBookmarksScreen" />
+        <activity android:name=".UserqspaperScreen" />
+        <activity android:name=".UserpdfBook" />
+        <activity android:name=".UserMyBorrowScreen" />
+        <activity android:name=".UserBookListScreen" />
+        <activity android:name=".QsPaperScreen" />
+        <activity android:name=".PdfBookScreen" />
+        <activity android:name=".AddPdfScreen" />
+        <activity android:name=".NoticeScreen" />
+        <activity android:name=".BorrowRequestScreen" />
+        <activity android:name=".AddBookScreen" />
+        <activity android:name=".BookListScreen" />
+        <activity android:name=".MemberListScreen" />
+        <activity android:name=".AdminLoginScreen" />
         <activity android:name=".AdminHomeScreen" />
         <activity android:name=".LoginScreen" />
         <activity android:name=".UserHomeScreen" />
